<resources>
    <string name="app_name">TimeTabler</string>
    <string name="main_logo_cap">Application Logo</string>
    <string name="header_login_01">Welcome,</string>
    <string name="header_login_02">Login Now.</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_caption">Login</string>
    <string name="reset_header_01">Reset Your Default Password</string>
    <string name="reset_info_header_02">Valid For 5 Minutes</string>
    <string name="reset_info_text">Change Your Default Password Before Proceeding</string>
    <string name="reset_pw_cap">Reset Password Picture</string>
    <string name="reset_p01">Provide New Password</string>
    <string name="reset_p02">Re-Enter New Password</string>
    <string name="reset_pw_btn">Reset Password</string>
    <string name="student_home">Home</string>
    <string name="student_enrolments">Enrolments (Batch)</string>
    <string name="user_profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="operation">My Operations</string>
    <string name="profile">My Profile</string>
    <string name="full_name_header">John Doe</string>
    <string name="welcome_home">My Timetable</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="student_header_batch">Batch Code</string>
    <string name="welcome_profile">My Profile</string>
    <string name="welcome_enrolment">My Enrolments (Batch)</string>
    <string name="first_name">First Name</string>
    <string name="first_name_hint">Provide The First Name</string>
    <string name="username">Provide The Username</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_hint">Provide The Last Name</string>
    <string name="email">Email Address</string>
    <string name="email_hint">Provide The Email Address</string>
    <string name="contact">Contact Number</string>
    <string name="contact_hint">0000000000</string>
    <string name="member_since">Member Since</string>
    <string name="member_since_hint">Provide The Date</string>
    <string name="age">Date of Birth (Age)</string>
    <string name="age_hint">Provide Age</string>
    <string name="update_caption">Update Account</string>
    <string name="password_01">Provide New Password</string>
    <string name="password_02">Re-Enter New Password</string>
    <string name="module_name">Module Name</string>
    <string name="taught_by">Taught By - </string>
    <string name="lecturer_name">Lecturer Name</string>
    <string name="credit_count">Credit Count - </string>
    <string name="independent_learning">Independent Learning - </string>
    <string name="contact_learning">Contact Learning - </string>
    <string name="_30">30</string>
    <string name="_300_hours">300 Hours</string>
    <string name="_50_hours">50 Hours</string>
    <string name="contact_lecturer">Contact Lecturer</string>
    <string name="today">Today</string>
    <string name="start_time_end_time">Start Time - End Time</string>
    <string name="l4_cr5">L4-CR5</string>
    <string name="no_lecture_scheduled">No Lectures Scheduled For Date</string>
    <string name="my_lectures">My Lectures</string>
    <string name="my_modules">My Modules</string>
    <string name="schedule_a_lecture">Schedule a Lecture</string>
    <string name="my_modules_schedule_lecture">My Modules (Schedule)</string>
    <string name="schedule_header">Schedule a Lecture</string>
    <string name="module_information">Module Name</string>
    <string name="classroom_for_lecture">Classroom for Lecture</string>
    <string name="lecture_date">Lecture Date</string>
    <string name="lecture_date_format">mm/dd/yyyy</string>
    <string name="time_label">--:--</string>
    <string name="lecture_commencing_time">Lecture Commencing Time</string>
    <string name="lecture_finishing_time">Lecture Finishing Time</string>
    <string name="select_batches_to_schedule_lecture_for">Select Batches To Schedule Lecture For</string>
    <string name="module_taught_by">Module Taught By -</string>
    <string name="schedule_lecture">Schedule Lecture</string>
    <string name="time_image">Time Image</string>
    <string name="select_classroom">Select Classroom</string>
    <string name="re_schedule_lecture">Re-Schedule Lecture</string>
    <string name="select_new_classroom">Select New Classroom</string>
    <string name="new_classroom_for_lecture">New Classroom For Lecture</string>
    <string name="current_classroom">Current Classroom</string>
    <string name="batches">Batches -</string>
    <string name="update_lecture">Update Lecture</string>
    <string name="user_management">User Management</string>
    <string name="classroom_management">Classroom Management</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="create_user">Create New User</string>
    <string name="enter_the_username">Enter The Username</string>
    <string name="enter_the_first_name">Enter The First Name</string>
    <string name="enter_the_last_name">Enter The Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="enter_the_email_address">Enter The Email Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="enter_contact_number">Contact Number (0771234567)</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="user_type">User Type</string>
    <string name="provide_user_type">Provide User Type</string>
    <string name="lecturers">Lecturers</string>
    <string name="students">Students</string>
    <string name="academic_administrators">Academic Administrators</string>
    <string name="delete_user">Delete User</string>
    <string name="email_user">Email User</string>
    <string name="call_user">Call User</string>
    <string name="academic_admins">Admin</string>
    <string name="search">Search</string>
    <string name="edit_classroom">Edit Classroom</string>
    <string name="delete_classroom">Delete Classroom</string>
    <string name="general_classroom_information">General Classroom Information</string>
    <string name="name_of_classroom">Name of Classroom</string>
    <string name="classroom_name_l4_cr5_auditorium">Classroom Name (L4-CR5/Auditorium)</string>
    <string name="maximum_capacity_of_classroom">Maximum Capacity of Classroom</string>
    <string name="maximum_capacity_1_999">Maximum Capacity (1-999)</string>
    <string name="facilities_of_classroom">Facilities of Classroom</string>
    <string name="air_conditioner">Air Conditioner</string>
    <string name="smart_board">Smart Board</string>
    <string name="no">Not Available</string>
    <string name="yes">Available</string>
    <string name="user_directory">User Directory</string>
    <string name="timetable_management">Timetable Management</string>
    <string name="module_management">Module Management</string>
    <string name="batch_management">Batch Management</string>
    <string name="lecturer_allocated">Lecturer Allocated - </string>
    <string name="batches_enrolled_to_module">Batches Enrolled To Module - </string>
    <string name="all_modules">All Modules</string>
    <string name="create_module">Create Module</string>
    <string name="provide_module_name">Provide Module Name</string>
    <string name="credit_count_create_module">Credit Count</string>
    <string name="select_credit_count">Select Credit Count</string>
    <string name="independent_learning_module_create">Independent Learning</string>
    <string name="provide_independent_learning_hours">Provide Independent Learning Hours</string>
    <string name="contact_lecture_hours">Contact Lecture Hours</string>
    <string name="provide_contact_lecture_hours">Provide Contact Lecture Hours</string>
    <string name="delete_module">Delete Module</string>
    <string name="update_module">Update Module</string>
    <string name="batch_code">Batch Code</string>
    <string name="assign_lecturer_to_module">Assign Lecturer To Module</string>
    <string name="change_lecturer_assigned">Change Lecturer Assigned</string>
    <string name="view_modules_assigned">View Modules Assigned</string>
    <string name="batch_no_batch">Batch: No Batch</string>
    <string name="batch_information">Batch Information</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>