<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:title="@string/operation">
            <menu>
                <item
                    android:id="@+id/lecturer_modules"
                    android:enabled="true"
                    android:icon="@drawable/ic_enrolments"
                    android:title="@string/my_modules" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/profile">
            <menu>
                <item
                    android:id="@+id/lecturer_profile"
                    android:enabled="true"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/user_profile" />

                <item
                    android:id="@+id/lecturer_logout"
                    android:enabled="true"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />
            </menu>
        </item>
    </group>
</menu>