<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:title="@string/operation">
            <menu>
                <item
                    android:id="@+id/student_enrolments"
                    android:enabled="true"
                    android:icon="@drawable/ic_enrolments"
                    android:title="@string/student_enrolments" />

                <item
                    android:id="@+id/student_task_management"
                    android:enabled="true"
                    android:icon="@drawable/ic_tasks"
                    android:title="@string/my_tasks" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/profile">
            <menu>
                <item
                    android:id="@+id/student_profile"
                    android:enabled="true"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/user_profile" />

                <item
                    android:id="@+id/student_logout"
                    android:enabled="true"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />
            </menu>
        </item>
    </group>
</menu>