<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="20dp"
    app:cardBackgroundColor="#F7FAFC"
    app:cardCornerRadius="5dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/module_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppins_semibold"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:text="@string/module_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/taught_by_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/module_title"
            android:fontFamily="@font/poppins"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/taught_by"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/taught_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/module_title"
            android:layout_toEndOf="@id/taught_by_label"
            android:fontFamily="@font/poppins"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/lecturer_name"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/credit_count_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/taught_by_label"
            android:fontFamily="@font/poppins"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/credit_count"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/credit_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/taught_by"
            android:layout_toEndOf="@id/credit_count_label"
            android:fontFamily="@font/poppins"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/_30"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/independent_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/credit_count_label"
            android:fontFamily="@font/poppins"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/independent_learning"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/independent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/credit_count"
            android:layout_toEndOf="@id/independent_label"
            android:fontFamily="@font/poppins"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/_300_hours"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/contact_learning_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/independent_label"
            android:fontFamily="@font/poppins"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/contact_learning"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/contact_learning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/independent"
            android:layout_toEndOf="@id/contact_learning_label"
            android:fontFamily="@font/poppins"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/_50_hours"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/contact_lecturer_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_below="@id/contact_learning_label"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/btn_primary"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/contact_lecturer"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>