<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    tools:context=".common.LoginFragment">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:contentDescription="@string/main_logo_cap"
        android:src="@drawable/ic_user" />

    <TextView
        android:id="@+id/header_title_01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_logo"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/header_login_01"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/header_title_02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_title_01"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/header_login_02"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_field_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_title_02"
        android:layout_marginTop="25dp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:allowUndo="true"
            android:fontFamily="@font/poppins"
            android:foreground="#00000000"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_field_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_field_layout"
        android:layout_marginTop="10dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:allowUndo="true"
            android:fontFamily="@font/poppins"
            android:foreground="#00000000"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/password_field_layout"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/login_caption"
        android:backgroundTint="@color/success_btn"
        android:textAllCaps="false"
        android:textSize="16sp" />
</RelativeLayout>